Update to OpenApi3.0.3 - Update to latest OpenApi specs - rename the endpoint for daily messages to daily-message - checked config file with https://bbva.github.io/apicheck ´s linter and check function
